logs/mother-webapps-framework.log
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './etc/init.d'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mother'...
Compiling './lib/python3.5/site-packages/mother/config.py'...
***   File "./lib/python3.5/site-packages/mother/config.py", line 50
    def statements(self, (tag, start, stop, subtags), buffer):
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mother/pluggable.py'...
***   File "./lib/python3.5/site-packages/mother/pluggable.py", line 141
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mother/routing.py'...
***   File "./lib/python3.5/site-packages/mother/routing.py", line 153
    exec "class HTTP_%d(HTTPCode): code = %d" % (code, code);
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mother-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './usr'...
Listing './usr/share'...
Listing './usr/share/doc'...
Listing './usr/share/doc/python-mother'...
Listing './var'...
Listing './var/lib'...
Listing './var/lib/mother'...
Listing './var/lib/mother/apps'...
Listing './var/lib/mother/apps/sample'...
Listing './var/lib/mother/apps/sample/static-content'...
Listing './var/lib/mother/apps/sample/templates'...
